EC-620 - Serialize reconcile response to json and fixed reconciliation tasks not fail when there is no reeconciliation